--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -5,36 +5,56 @@
 <section class="content">
   <section class="invoice">
 
-      
-        {{form.valid}}
-        {{form.value | json}}
-
-        <form #form="ngForm" novalidate>
+        <form [formGroup]="orderForm" novalidate>
           <div class="row">
             <div class="col-xs-12">
               <h2 class="page-header">
                 <i class="fa fa-shopping-cart"></i> Finalize o seu pedido
               </h2>
             </div>
-          </div>                
+          </div>
+          
+          <div class="row">
+            <div class="col-xs-12 col-sm-9">
+              <p class="lead">Seus Dados:</p>
+            </div>
+            <div class="col-xs-12 col-sm-3">
+              <span class="help-block pull-right has-error-block" *ngIf="orderForm.hasError('emailsNotMatch')"><i class="fa fa-remove"></i> E-mails não conferem</span>
+            </div>
+            <div class="col-sm-6 col-xs-12">
+              <mt-input-container errorMessage="Campo obrigatório e com 5 caracteres" label="Nome">
+                <input class="form-control" formControlName="name" placeholder="Nome" autocomplete="off">
+              </mt-input-container>
+            </div>
+            <div class="col-sm-3 col-xs-6">
+              <mt-input-container errorMessage="E-mail inválido" label="E-mail">
+                  <input type="text" class="form-control" formControlName="email" placeholder="E-mail" autocomplete="off">
+              </mt-input-container>
+            </div>
+            <div class="col-sm-3 col-xs-6">
+              <mt-input-container errorMessage="E-mail inválido" label="E-mail">
+                  <input type="text" class="form-control" formControlName="emailConfirmation" placeholder="Confirmação do e-mail" autocomplete="off">
+              </mt-input-container>
+            </div>
+          </div>
 
-          <div class="row invoice-info">
+          <div class="row">
             <div class="col-xs-12">
               <p class="lead">Endereço de Entrega:</p>
             </div>
             <div class="col-sm-6 col-xs-12">
               <mt-input-container errorMessage="Campo obrigatório e com 5 caracteres" label="Endereço">
-                <input class="form-control" name="address" placeholder="Endereço" ngModel required minlength="5" autocomplete="off">
+                <input class="form-control" formControlName="address" placeholder="Endereço" autocomplete="off">
               </mt-input-container>
             </div>
             <div class="col-sm-3 col-xs-6">
               <mt-input-container errorMessage="Obrigatório e somente números" label="Número">
-                  <input type="text" class="form-control" name="number" placeholder="Número" pattern="^[0-9]*$" ngModel required autocomplete="off">
+                  <input type="text" class="form-control" formControlName="number" placeholder="Número" autocomplete="off">
               </mt-input-container>
             </div>
             <div class="col-sm-3 col-xs-6">
               <mt-input-container label="Complemento">
-                  <input type="text" class="form-control" name="optional" ngModel placeholder="Complemento">
+                  <input type="text" class="form-control" formControlName="optionalAddress" placeholder="Complemento">
               </mt-input-container>
             </div>
             <!-- /.col -->
@@ -46,51 +66,13 @@
             <div class="col-xs-12">
               <p class="lead">Itens do Pedido:</p>
             </div>
-            <div class="col-xs-12 table-responsive">
+            
+            <mt-order-items [items]="cartItems()" 
+                            (increaseQty)="increaseQty($event)"
+                            (decreaseQty)="decreaseQty($event)"
+                            (remove)="remove($event)">
+            </mt-order-items>
 
-              <table class="table table-striped">
-                <thead>
-                <tr>
-                  <th class="text-center">Quantidade</th>
-                  <th>Item</th>
-                  <th>Descrição</th>
-                  <th class="text-right">Subtotal</th>
-                  <th class="text-right"></th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                  <td class="text-center">
-                    <a class="btn btn-sm"><i class="fa fa-minus"></i></a>
-                    1
-                    <a class="btn btn-sm"><i class="fa fa-plus"></i></a>
-                  </td>
-                  <td>Cup Cake</td>
-
-                  <td>Recheado com doce de leite</td>
-                  <td class="text-right">R$ 10,00</td>
-                  <td class="text-right">
-                    <a class="btn btn-sm danger"><i class="fa fa-remove"></i></a>
-                  </td>
-                </tr>
-                <tr>
-                  <td class="text-center">
-                    <a class="btn btn-sm"><i class="fa fa-minus"></i></a>
-                    1
-                    <a class="btn btn-sm"><i class="fa fa-plus"></i></a>
-                  </td>
-                  <td>Croissant</td>
-
-                  <td>Recheado com presunto e queijo</td>
-                  <td class="text-right">R$ 10,00</td>
-                  <td class="text-right">
-                    <a class="btn btn-sm danger "><i class="fa fa-remove"></i></a>
-                  </td>
-                </tr>
-
-                </tbody>
-              </table>
-            </div>
             <!-- /.col -->
           </div>
           <!-- /.row -->
@@ -101,7 +83,7 @@
               <p class="lead">Formas de Pagamento:</p>
 
                 <div class="form-group">
-                   <mt-radio [options]="paymentOptions" name="paymentOption" ngModel></mt-radio>
+                   <mt-radio [options]="paymentOptions" formControlName="paymentOption"></mt-radio>
                 </div>
 
             </div>
@@ -109,22 +91,9 @@
             <div class="col-sm-6 col-xs-12">
               <p class="lead">Frete e Total:</p>
 
-              <div class="table-responsive">
-                <table class="table">
-                  <tbody><tr>
-                    <th style="width:50%">Itens:</th>
-                    <td class="text-right">R$ 20,00</td>
-                  </tr>
-                  <tr>
-                    <th>Frete:</th>
-                    <td class="text-right">R$ 8,00</td>
-                  </tr>
-                  <tr>
-                    <th>Total:</th>
-                    <td class="text-right">R$ 28,00</td>
-                  </tr>
-                </tbody></table>
-              </div>
+              <mt-delivery-costs 
+                  [delivery]="delivery"
+                  [itemsValue]="itemsValue()"></mt-delivery-costs>
             </div>
             <!-- /.col -->
           </div>
@@ -133,7 +102,9 @@
 
         <div class="row">
           <div class="col-xs-12">
-            <button href="order-summary.html" class="btn btn-success pull-right" [disabled]="!form.valid"><i class="fa fa-credit-card"></i> Concluir Pedido
+            <button (click)="checkOrder(orderForm.value)" class="btn btn-success pull-right" 
+              [disabled]="!orderForm.valid || cartItems().length === 0">
+                <i class="fa fa-credit-card"></i> Concluir Pedido
             </button>
           </div>
         </div>
