--- a/src/app/restaurant-detail/menu/menu.component.html
+++ b/src/app/restaurant-detail/menu/menu.component.html
@@ -4,9 +4,10 @@
   <mt-menu-item 
     *ngFor="let item of menu | async" 
     [menuItem]="item" (add)="shoppingCart.addItem($event)"></mt-menu-item>
+  <!-- /.info-box -->
 
 </div>
 <div class="col-md-3 col-xs-12">
-  <mt-shopping-cart #shoppingCart></mt-shopping-cart>
+<mt-shopping-cart #shoppingCart></mt-shopping-cart>
 </div>
 <!-- FIM DO MENU -->
