--- a/src/app/restaurant-detail/shopping-cart/shopping-cart.component.html
+++ b/src/app/restaurant-detail/shopping-cart/shopping-cart.component.html
@@ -7,12 +7,13 @@
   </div>
   <!-- /.box-header -->
   <div class="box-body">
+
     <div *ngIf="!items().length">
       <p class="text-center">
         Seu carrinho está vazio!
       </p>
     </div>
-    <div class="table-responsive" *ngIf="items().length">
+    <div *ngIf="items().length" class="table-responsive">
         <table class="table">
           <tbody>
           <tr *ngFor="let item of items()" [@row]="rowState">
@@ -22,6 +23,7 @@
             <td class="text-right">
               <a (click)="removeItem(item)" class="btn btn-sm danger"><i class="fa fa-remove"></i></a>
             </td>
+
           </tr>
           <tr>
             <th>Total:</th>
@@ -31,7 +33,7 @@
         </tbody></table>
       </div>
   </div>
-  <div class="box-footer" *ngIf="items().length">
+  <div *ngIf="items().length" class="box-footer">
     <div class="pull-right">
       <button (click)="clear()" type="button" class="btn btn-danger"><i class="fa fa-trash"></i> Limpar</button>
       <a [routerLink]="['/order']" class="btn btn-success"><i class="fa fa-credit-card"></i> Fechar Pedido</a>
